--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,18 @@ name = "vision"
 version = "0.0.1"
 authors = ["James Lucas <lucasj94@hotmail.co.uk>"]
 
+categories = ["science"]
+description = "Computer vision benchmarking datasets"
+repository = "https://github.com/AtheMathmo/vision-rs"
+documentation = "https://doc.rs/vision"
+keywords = ["vision","datasets","mnist","machine-learning"]
+readme = "README.md"
+license = "MIT"
+
 [dependencies]
 hyper = "0.11.9"
 tokio-core = "0.1.12"
 futures = "0.1.18"
 flate2 = "1.0.1"
 tar = "0.4"
-byteorder = "1"
+byteorder = "1.2"
